# jswr

./: .gitignore  CMakeLists.txt  README.md
ext/glad/include/glad/: glad.h
src/: buffers.hpp  camera.hpp  display.cpp  display.hpp  glad.c  main.cpp  model.cpp  model.hpp  rasterizer.cpp  rasterizer.hpp  renderer.cpp  renderer.hpp  shader.hpp
